# nayeoniegame

./: .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  build-exe.py  flake.nix  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
nayeoniegame/: __main__.py  config.py  game.py  settings.py  test_setup.py
nayeoniegame/assets/: .gitignore  __init__.py
nayeoniegame/entities/: falling_circle.py  maze.py  maze_player.py  paddle.py  player.py  snake.py  snake_sprite.py
nayeoniegame/scenes/: __init__.py  base.py  gameplay.py  main_menu.py  minigame_color_collector.py  minigame_maze_runner.py  minigame_movement.py  minigame_selection.py  minigame_snake.py  settings.py
tests/: __init__.py  conftest.py  test_entities_falling_circle.py  test_entities_maze.py  test_entities_maze_player.py  test_entities_paddle.py  test_entities_player.py  test_scenes_main_menu.py  test_scenes_minigame_color_collector.py  test_scenes_minigame_maze_runner.py  test_scenes_minigame_movement.py  test_scenes_minigame_selection.py  test_scenes_minigame_snake.py  test_settings.py
