[project]
name = "nayeoniegame"
version = "0.1.0"
description = "A pygame-based game"
authors = [
    {name = "Author Name", email = "author@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nayeoniegame"]
