[project]
name = "nayeoniegame"
version = "0.1.0"
description = "A pygame-based game"
authors = [
    {name = "Alice Huston", email = "aliceghuston@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nayeoniegame"]

[dependency-groups]
dev = [
    "prek>=0.3.0",
    "pytest-cov>=4.1.0",
    "pytest>=8.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.13",
]

#[tool.ty.overrides.rules]
#possibly-unresolved-reference = "ignore"
#unresolved-import = "ignore"
