[project]
name = "nayeoniegame"
version = "0.1.0"
description = "A pygame-based game"
authors = [
    {name = "Alice Huston", email = "aliceghuston@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nayeoniegame"]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "prek>=0.3.0",
    "pytest-cov>=4.1.0",
    "pytest>=8.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=nayeoniegame",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["nayeoniegame"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_setup.py",
    "*/__main__.py",
    "*/game.py",
    "*/scenes/settings.py",  # UI-only scene, hard to test meaningfully
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["nayeoniegame"]
